<resources>
    <string name="app_name">QueroJa</string>
    <string name="app_logo">QueroJa</string>
    <string name="login_title">QueroJá</string>
    <string name="login_username_hint">Seu e-mail</string>
    <string name="login_password_hint">Sua senha</string>
    <string name="login_button">Entrar</string>
    <string name="login_no_account">Não tenho conta</string>
    <string name="signup_name_hint">Seu nome</string>
    <string name="signup_username_hint">Seu melhor e-mail</string>
    <string name="signup_password_hint">Crie uma senha</string>
    <string name="signup_confirm_password_hint">Confirme a senha</string>
    <string name="signup_button">Cadastrar</string>
    <string name="signup_go_back">Voltar</string>
    <string name="signup_success">Cadastro realizado com sucesso!</string>
    <string name="signup_error">Erro ao cadastrar. Tente novamente mais tarde.</string>
    <string name="list_wishes_title">Lista de Desejos</string>
    <string name="list_wishes_add_wish">Adicionar</string>
    <string name="list_wishes_empty">Nenhum desejo encontrado.</string>
    <string name="list_wishes_error">Erro ao carregar a lista de desejos.</string>
    <string name="form_title">Novo Desejo</string>
    <string name="form_title_hint">Título</string>
    <string name="form_description_hint">Descrição</string>
    <string name="form_link_hint">Link</string>
    <string name="form_priority_label">Nível de desejo</string>
    <string name="form_save_button">Salvar</string>
    <string name="form_go_back">Voltar</string>
    <string name="form_status_label">Já tenho</string>
    <string name="empty_wish_list_message">Nenhum item encontrado</string>
    <string name="share_wishlist">"Compartilhar Lista de Desejos</string>

</resources>